--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -438,4 +438,15 @@ a:hover{}
     line-height: 35px;
 }
 .bootbox{background: rgba(0,0,0,0.5);}
-#Ktext{color: #3ea2ee !important;}
+#name{color: #3ea2ee !important;}
+#tzhihang{color: #3ea2ee !important;}
+#ttime{color: #3ea2ee !important;}
+#cname{color: #3ea2ee !important;}
+#tname{color: #3ea2ee !important;}
+#aname{color: #3ea2ee !important;}
+#atzhihang{color: #3ea2ee !important;}
+#tnumber{color: #3ea2ee !important;}
+#aname{color: #3ea2ee !important;}
+#aname{color: #3ea2ee !important;}
+#aname{color: #3ea2ee !important;}
+#aname{color: #3ea2ee !important;}
